# ece650

a1/: a1ece650.py
a2/: CMakeLists.txt  README.md  abc.txt  cpptest.cpp  ece650-a2.cpp  meena  testout.txt
a2/ece650-a2.dSYM/Contents/: Info.plist
a2/ece650-a2.dSYM/Contents/Resources/DWARF/: ece650-a2
a3/: CMakeLists.txt  ece650-a1.py  ece650-a2.cpp  ece650-a3.cpp  rgen.cpp  user.yml
a4/: CMakeLists.txt  a4-ece650.cpp  copy.cpp  dummy.cpp  ece650-a4.cpp  input.txt  user.yml
a4/minisat/: CMakeLists.txt
a4/testdata/: i1.txt
t1/: README.md  abc.py  syaml.py
t2/: CMakeLists.txt  README.md  prime_factor.cpp
